--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 {% extends 'store/main.html' %}
 {% load static %}
 {% block title_block %}Checkout{% endblock %}
@@ -41,7 +43,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id = 'make-payment'>Make payment</button>
+				<div id="paypal-button-container"></div>
+				{% comment %} <button id = 'make-payment'>Make payment</button> {% endcomment %}
 			</div>
 			
 		</div>
@@ -56,15 +59,50 @@
 				<div class="cart-row">
 					<div style="flex:2"><img class="row-image" src="{{item.product.image.url}}"></div>
 					<div style="flex:2"><p>{{item.product.name}}</p></div>
-					<div style="flex:1"><p>TK {{item.product.price}}</p></div>
-					<div style="flex:1"><p>x{{item.quantity}}</p></div>
+					<div style="flex:1"><p>{% if request.user.customer.subscription %}
+						$ {{ order_total|floatformat:2 }}
+						<br>(10% discount applied)
+						{% else %}${{ order_total|floatformat:2 }}{% endif %}
+					</p></div>
+					<div style="flex:1"><p> x{{item.quantity}}</p></div>
 				</div>
 				{% endfor %}
 				<h5>Items:   {{order.get_cart_items}}</h5>
-				<h5>Total:   TK {{order.get_cart_total|floatformat:2}}</h5>
+				<h5>Total:   $ {{order_total|floatformat:2}}</h5>
 			</div>
 		</div>
 	</div>
+
+	<script src="https://www.paypal.com/sdk/js?client-id=AV2OMmi0HOy2GT5mHpj7JMtArIBrB1n4sPvp1Onfc-3Oe2TDWU91FEmIwjnboWvhgCISnVMuh_rbhjp7&currency=USD&disable-funding=credit"></script>
+
+    <script>
+
+		var total = {{order.get_cart_total}}
+		paypal.Buttons({
+  
+		  // Order is created on the server and the order id is returned
+  
+		  createOrder: function(data, actions) {
+			return actions.order.create({
+				purchase_units: [{
+					amount:{
+						value: parseFloat(total).toFixed(2)
+					}
+				}]
+			});
+		  },
+
+		  //Finalize the transaction
+		  onApprove: function(data, actions) {
+  
+			return actions.order.capture().then(function(details) {
+				submitFormData()
+			});
+		  }
+  
+		}).render('#paypal-button-container');
+  
+	  </script>
 
 	<script type = "text/javascript">
 		var shipping = '{{order.shipping}}'
@@ -91,11 +129,11 @@
 			document.getElementById('form-button').classList.add('hidden')
 			document.getElementById('payment-info').classList.remove('hidden')
 			})
-		
+		/*
 		document.getElementById('make-payment').addEventListener('click', function(e){
 			submitFormData()
 		})
-
+		*/
 		function submitFormData(){
 			console.log('Payment button clicked')
 
@@ -145,6 +183,5 @@
 			})
 		
 		}
-
 	</script>
-{% endblock content %}
+{% endblock %}
