--- a/store/templates/store/dashboard.html
+++ b/store/templates/store/dashboard.html
@@ -54,7 +54,6 @@
         <h5>Customers:</h5>
         <hr>
         <div class="card card-body">
-            <a class="btn btn-primary btn-sm btn-block" href = "" >Create Customer</a>
                 <table class="table table-sm">
                     <tr>
                         <th></th>
@@ -64,7 +63,7 @@
 
                     {% for customer in customers %}
                         <tr>
-                            <td><a class="btn btn-sm btn-info" href = "{% url 'customer' customer.id %"}>View</a></td>
+                            <td><a class="btn btn-sm btn-info" href = "{% url 'customer' customer.id %}">View</a></td>
                             <td>{{customer.name}}</td>
                             <td>{{customer.phone}}</td>
                         </tr>
