--- a/store/templates/store/status.html
+++ b/store/templates/store/status.html
@@ -1,6 +1,7 @@
 <br>
 
 <div class="row">
+    {% if request.user.is_staff %}
     <div class="col">
         <div class="col-md">
             <div class="card text-center text-white mb-3" id="total-products">
@@ -13,7 +14,7 @@
             </div>
         </div>
     </div>
-
+    {% endif %}
     <div class="col">
         <div class="col-md">
             <div class="card text-center text-white mb-3" id="total-orders">
