--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -11,8 +11,8 @@
             <hr>
 
             <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
-		    <a class="btn btn-outline-success" href="#">View</a>
-		    <h4 style="display: inline-block; float: right"><strong>TK {{ product.price|floatformat:2 }}</strong></h4>
+		    <a class="btn btn-outline-success" href="{% url 'product_detail' pk=product.pk %}">View</a>
+		    <h4 style="display: inline-block; float: right"><strong>$ {{ product.price|floatformat:2 }}</strong></h4>
 		</div>
     
 	</div>
