--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -16,6 +16,13 @@
 			height: 100%;
 			background: #7abecc !important;
 		}
+
+		.title {
+		
+			position: relative;
+			display: flex;
+			justify-content: center;
+		}
 		.user_card {
 			width: 350px;
 			margin-top: auto;
@@ -76,6 +83,7 @@
 
 </head>
 <body>
+	<div class = "title"><h1>Welcome to Electronic Fellow</h1></div>
 	<div class="container h-100">
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
