--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -62,7 +62,7 @@
 			<br>			
 		  </ul>
 		  <div class= "nav-item active">
-			<a href = {% url 'subscribe' %}>Offer</a>
+			<a href = "{% url 'subscribe' %}" style="color: white;">Offer</a>
 		  </div>
 		  <div class="form-inline my-2 my-lg-0">
 			{% if request.user.is_authenticated %}
@@ -76,6 +76,7 @@
 			{% else %}
 			<a href="{% url 'login' %}"class="btn btn-warning">Login</a>
 			{% endif %}
+			<a href = "{% url 'help_center' %}" style="color: white;">Help Center</a>
 			<a href="{% url 'cart' %}">
 			   <img  id="cart-icon" src="{% static 'images/cart.png' %}">
 		   </a>
