--- a/store/templates/store/order_form.html
+++ b/store/templates/store/order_form.html
@@ -13,7 +13,7 @@
                 {% csrf_token %}
                 {{form}}
 
-                <input type="submit" name="Submit">
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
 
         </div>
